Add page Loader

--- a/ECommerceFrontend/Pages/Index.razor
+++ b/ECommerceFrontend/Pages/Index.razor
@@ -64,6 +64,29 @@
             </div>
         </div>
     }
+    @if (loading)
+    {
+        for (int i = 0; i < 6; i++)
+        {
+            <div class="col-md-4 mt-2">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="card-img-actions"> <img src="/dist/img/imageplaceholder.jpg" class="card-img img-fluid" width="96" height="350" alt=""> </div>
+                    </div>
+                    <div class="card-body bg-light text-center">
+                        <div class="mb-2">
+                            <h6 class="font-weight-semibold mb-2"> <a href="#" class="text-default mb-2" data-abc="true">Loading...</a> </h6> <a href="#" class="text-muted" data-abc="true">Loading...</a>
+                        </div>
+                        <h3 class="mb-0 font-weight-semibold">Kes. Loading...</h3>
+                        <div> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> <i class="fa fa-star star"></i> </div>
+                        <div class="text-muted mb-3">Loading reviews...</div> <button type="button" class="btn bg-cart"><i class="fa fa-cart-plus mr-2"></i> Loading...</button>
+                    </div>
+                    <div class="overlay lightblue"><i class="fas fa-2x fa-sync-alt fa-spin"></i></div>
+                </div>
+            </div>
+        }
+       
+    }
 </div>
 
 @code {
