--- a/ECommerceFrontend/_Imports.razor
+++ b/ECommerceFrontend/_Imports.razor
@@ -16,4 +16,6 @@
 @using ECommerceFrontend.Services
 @using ECommerceFrontend.Helpers
 @using ECommerceFrontend.Components
+@using Blazored.SessionStorage
+@using Blazored.LocalStorage
 @attribute [Authorize]
